client routes and more
