# Controllers/Auth.js
@@ -1,3 +1,4 @@
+const Client = require("../Models/Client");
 const User = require("../Models/User");
 const catchAsync = require("../Utils/catchAsync");
 const { sign } = require("../Utils/jwt");
@@ -8,14 +9,14 @@ exports.login = catchAsync(async (req, res) => {
 
   if (!phoneNumber || !password)
     return res.status(400).json({
-      message: "Invalid Ceredentails",
+      message: "Invalid Credentials",
     });
 
   const user = await User.findOne({ phoneNumber });
 
   if (!user)
     return res.status(400).json({
-      message: "Invalid Ceredentails",
+      message: "Invalid Credentials",
     });
 
   const isMatch = await comparePassword(password, user.password);
@@ -32,6 +33,39 @@ exports.login = catchAsync(async (req, res) => {
   }
 
   res.status(400).json({
-    message: "Invalid Ceredentails",
+    message: "Invalid Credentials",
+  });
+});
+
+exports.loginClient = catchAsync(async (req, res) => {
+  const { phoneNumber, password } = req.body;
+
+  if (!phoneNumber || !password)
+    return res.status(400).json({
+      message: "Invalid Credentials",
+    });
+
+  const client = await Client.findOne({ phoneNumber });
+
+  if (!client)
+    return res.status(400).json({
+      message: "Invalid Credentials",
+    });
+
+  const isMatch = await comparePassword(password, client.password);
+
+  if (isMatch) {
+    const token = sign({
+      client: client._id,
+    });
+
+    return res.status(200).json({
+      token,
+      client,
+    });
+  }
+
+  res.status(400).json({
+    message: "Invalid Credentials",
   });
 });
