# app.js
@@ -11,9 +11,12 @@ app.use("/swagger", swaggerUi.serve, swaggerUi.setup(swaggerDocument));
 const ProductRoute = require("./Routes/Product");
 const ProductCategoryRoute = require("./Routes/Category");
 const UserRoute = require("./Routes/User");
+const ClientsRoute = require("./Routes/Client");
 const AuthRoute = require("./Routes/Auth");
+
 const ProtectedRoute = require("./Utils/ProtectedRoute");
 const AdminRoute = require("./Utils/AdminRoute");
+const ClientRoute = require("./Utils/ClientRoute");
 
 app.use(cors("*"));
 
@@ -28,6 +31,7 @@ app.use((req, res, next) => {
 
 app.use("/api/v1/products", ProtectedRoute, ProductRoute);
 app.use("/api/v1/categories", ProtectedRoute, ProductCategoryRoute);
+app.use("/api/v1/clients", ClientRoute, ClientsRoute);
 app.use("/api/v1/users", AdminRoute, UserRoute);
 app.use("/api/v1/auth", AuthRoute);
 
